Append final solve about arrows more in blocks - Works, News.

--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@
             </div> <!--/portfolio__col-->
             </div> <!--/portfolio--> 
 
-            <div class="work__button work__button-first-show">
-            <a class="btn-works" href="#">
+            <div class="work__button">
+            <a class="btn-works work__button-first-show" href="#">
                 <svg class="work__item work__item--up">
                     <use class="work__icon" xlink:href="#arrow"></use>
                 </svg>
@@ -534,8 +534,8 @@
                 </svg>
             </a>
             </div>
-            <div class="work__button work__button-second-hide">
-                <a class="btn-works" href="#">
+            <div class="work__button work__button-second-rotate">
+                <a class="btn-works work__button-second-hide" href="#">
                     <svg class="work__item work__item--up">
                         <use class="work__icon" xlink:href="#arrow"></use>
                     </svg>
@@ -649,9 +649,9 @@
                 </div>
                 </div>
                 </div>
-                <div class="news__button__arrow news__button-first-show">
+                <div class="news__button__arrow">
                 <div class="work__button">
-                    <a class="btn-works" href="#">
+                    <a class="btn-works news__button-first-show" href="#">
                         <svg class="work__item work__item--up">
                             <use class="work__icon" xlink:href="#arrow"></use>
                         </svg>
@@ -661,9 +661,9 @@
                     </a>
                     </div>
                 </div>
-                <div class="news__button__arrow news__button-second-hide">
-                    <div class="work__button">
-                        <a class="btn-works" href="#">
+                <div class="news__button__arrow">
+                    <div class="work__button news__button-second-rotate">
+                        <a class="btn-works news__button-second-hide" href="#">
                             <svg class="work__item work__item--up">
                                 <use class="work__icon" xlink:href="#arrow"></use>
                             </svg>
