Add adaptation button (Show more works) when width will be more han 1199px)

--- a/index.html
+++ b/index.html
@@ -745,7 +745,6 @@
         </div>
             </button>
             <div class="modal-work">  <!-- После открытия работ, сделать иконки использующихся стэков технологий (JS, CSS, LESS, PHP...) -->
-                
                 <div class="modal-work__preview">
                     <div id="worksSlider">
                         <div>
@@ -996,7 +995,7 @@
                                             <use class="contact__icon" xlink:href="#phone"></use>
                                         </svg>
                                     </div>
-                                        <p class="contact__text">(380)-99-205-4196</p>
+                                        <p class="contact__text contact__text-number">(380)-99-205-4196</p>
                                 </div>
                             </div>
                                 <div class="modal__contact__item">
@@ -1006,7 +1005,7 @@
                                             <use class="contact__icon" xlink:href="#mail"></use>
                                         </svg>
                                     </div>
-                                    <p class="contact__text">svilohuzov.ivan@gmail.com</p>
+                                    <p class="contact__text contact__text-email">svilohuzov.ivan@gmail.com</p>
                             </div>
                     </div>
                             </div>
