Final result about modal work. Append some information in About, modal work. Add infinity rotating icon

--- a/index.html
+++ b/index.html
@@ -560,10 +560,12 @@
                     <h3 class="about__title">ABOUT ME</h3>
                     <h2 class="about__bigtitle"><span>W</span><span>H</span><span>O </span><span>A</span><span>M </span><span>I</span></h2>
                     <div class="about__text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat est consequat eu. Quisque aliquet a ipsum nec tincidunt. Nulla vitae rhoncus leo.</p>
+                        <p>I have become interested in Web Development quite recently. Nevertheless, I have an experience in this sphere such as participation in UPSHIFT program from UNICEF. My team and I created MVP for our Web Dev school.  What is more, we were the winners.
+                            In result, more than 30 people were interested in it and visited our classes. Furthermore, my experience with designing and developing websites using JavaScript, HTML, CSS and a bit React matches well with your requirements.
+                            </p>
                     <div class="about__text-hide">
-                        <p class="about__text-one">Praesent dui sapien, bibendum quis tempus dictum, auctor ac dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec at mauris porta, ullamcorper sem quis, lobortis sem. Donec sit amet aliquet dui, at varius est. Phasellus porttitor finibus neque vel vehicula. Duis in nulla egestas, dignissim elit at, imperdiet eros. Integer tristique posuere purus.</p>
-                        <p class="about__text-two">Suspendisse placerat, quam vitae ullamcorper sollicitudin, dui ligula molestie massa, sit amet laoreet nibh ex vitae dui. Aenean laoreet pellentesque lacus, eget varius massa mattis quis. Nunc ultrices urna eu nunc lobortis pulvinar. Duis viverra, quam non imperdiet scelerisque, urna nunc consequat velit, in mollis erat nibh in libero.</p>
+                        <p class="about__text-one">I am a fourth-year student, and I study computer science, which is a synergy of web development, code engineering and computer «troubles solving». Such a combination creates a diversity of knowledge, allowing you to look at the tasks from different perspectives.</p>
+                        <p class="about__text-two">Recently I moved to Kyiv from a small town. I`m very motivated and sure that’s a new stage in my life. I also understand that I`m not an expert in Web Dev, yet this position can be a way for me to enter this realm and foster my knowledge in it, so that in future I could become a professional.</p>
                     </div>
                     <div class="about__text-more">
                         <div class="about__link-hide">
@@ -596,32 +598,35 @@
             </div>
             <section class="news__items">
                 <div class="news__item" data-news="news-one">
-                    <div class="news__shadow">
+                    <div class="news__shadow" data-show="work" data-target="work-seven">
                     <div class="news__content-main">
                         <div class="news__content">
                             <div class="news__content-text"><span>3</span> <br> <span>J</span><span>a</span><span>n</span><span>u</span><span>a</span><span>r</span><span>y</span></div>
                         </div>
                     </div>
-                    <div class="news__img">
-                    <img src="https://via.placeholder.com/370x330" alt="" class="news__photo">
+                    <div class="news__img news__img-one">
+                    <img src="/images/logo512.png" alt="React JS" class="news__photo news__photo-one">
                     </div>
-                    <h5 class="news__item-title">TEN THE BEST APP IN 2017</h5>
-                    <div class="news__item-category">CATEGORY</div>
-                    <div class="news__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat.</div>
+                    <h5 class="news__item-title">The most important functions</h5>
+                    <div class="news__item-category">REACT.JS</div>
+                    <div class="news__item-text">This framework works with interface faster than others. Thanks to this, programmers can save a lot of time and become more efficient. Thanks to this, programmers can save a lot of time and become more efficient.</div>
                     <div class="news__button">
                     <a class="news__btn" href="#">READ MORE</a>
                 </div>
                 </div>
                 </div>
                 <div class="news__item" data-news="news-two">
-                    <div class="news__shadow">
+                    <div class="news__shadow" data-show="work" data-target="work-eight">
                     <div class="news__content-main">
                         <div class="news__content">
                             <div class="news__content-text"><span>1</span><span>5</span> <br> <span>F</span><span>e</span><span>b</span><span>r</span><span>u</span><span>a</span><span>r</span><span>y</span></div>
                         </div>
                     </div>
-                    <div class="news__img">
-                    <img src="https://via.placeholder.com/370x330" alt="" class="news__photo">
+                    <div class="news__img news__img-one">
+                        <svg class="work__photo-item">
+                            <use class="work__photo-item-soon" xlink:href="#soon">
+                            </use>
+                        </svg>
                      </div>
                     <h5 class="news__item-title">WEBSITE INSPIRATION</h5>
                     <div class="news__item-category">CATEGORY</div>
@@ -632,14 +637,17 @@
                 </div>
                 </div>
                 <div class="news__item" data-news="news-three">
-                    <div class="news__shadow">
+                    <div class="news__shadow" data-show="work" data-target="work-nine">
                     <div class="news__content-main">
                         <div class="news__content">
                             <div class="news__content-text"><span>2</span><span>3</span> <br> <span>F</span><span>e</span><span>b</span><span>r</span><span>u</span><span>a</span><span>r</span><span>y</span></div>
                         </div>
                     </div>
-                    <div class="news__img">
-                    <img src="https://via.placeholder.com/370x330" alt="" class="news__photo">
+                    <div class="news__img news__img-one">
+                        <svg class="work__photo-item">
+                            <use class="work__photo-item-soon" xlink:href="#soon">
+                            </use>
+                        </svg>
                      </div>
                     <h5 class="news__item-title">CHANGES IN SOCIAL MEDIA</h5>
                     <div class="news__item-category">CATEGORY</div>
