Modal resume information
More adaptation modal-resume with information.

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                     </div>
                     <h5 class="news__item-title">The most important functions</h5>
                     <div class="news__item-category">REACT.JS</div>
-                    <div class="news__item-text">This framework works with interface faster than others. Thanks to this, programmers can save a lot of time and become more efficient. Thanks to this, programmers can save a lot of time and become more efficient.</div>
+                    <div class="news__item-text">This framework works with interface faster than others. Thanks to this, programmers can save a lot of time and become more efficient. Compared to Angular, React's productivity has grown steadily, becoming a...</div>
                     <div class="news__button">
                     <a class="news__btn" href="#">READ MORE</a>
                 </div>
@@ -861,46 +861,39 @@
                         <h5 class="modal__inner__work">Front-End</h5>
                     <div class="modal__inner__post">Mentor</div>
                     <div class="modal__inner__text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper.
+                        Winner of the UPSHIFT Ukraine project, a global innovation program of UNICEF with
+                        the EasyScript project. Creating team EasyScript. EasyScript - is an offline web development course. Free opportunity for everyone to learn
+                        Front-end.
                     </div>
                 </div>
 
-                <div class="modal__inner__item modal__inner__item-none">
+                <div class="modal__inner__item">
                     <div class="modal__inner__subtitle" datetime="02-20-2020">2019 - 2020</div>
-                <h5 class="modal__inner__work">Front-End</h5>
-            <div class="modal__inner__post">Mentor</div>
+                <h5 class="modal__inner__work">Computer technologies</h5>
+            <div class="modal__inner__post">Senior Laboratory Assistant</div>
             <div class="modal__inner__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper.
+                I served as a system administrator at the Department of higher mathematics and computer technologies. My duties included filling in and updating information on the University's website and social networks, configuring computer components and software.
             </div>
         </div>
-
-        <div class="modal__inner__item">
-            <div class="modal__inner__subtitle" datetime="02-20-2020">2019 - 2020</div>
-        <h5 class="modal__inner__work">Front-End</h5>
-    <div class="modal__inner__post">Mentor</div>
-    <div class="modal__inner__text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper.
-    </div>
-</div>
                 </div>
 
     
                 <div class="modal__resume__education modal__resume-padding">
                     <h4 class="modal__inner__title">Education</h4>
                     <div class="modal__inner__item">
-                        <div class="modal__inner__subtitle" datetime="02-20-2020">2005 - 2010</div>
-                    <h5 class="modal__inner__work">UI/UX Design</h5>
-                <div class="modal__inner__post">LA University, USA</div>
+                        <div class="modal__inner__subtitle" datetime="02-20-2020">2018 - 2021</div>
+                    <h5 class="modal__inner__work">Student</h5>
+                <div class="modal__inner__post">Institut digital technologies, Ukraine</div>
                 <div class="modal__inner__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper.
+                   From 2018 year to the present day i am student of Institut chemical and digital technologies named Vladimir Dal. student 4th year.
                 </div>
             </div>
             <div class="modal__inner__item modal__inner__item-none">
-                <div class="modal__inner__subtitle" datetime="02-20-2020">2019 - 2020</div>
-            <h5 class="modal__inner__work">Front-End</h5>
-        <div class="modal__inner__post">Mentor</div>
+                <div class="modal__inner__subtitle" datetime="02-20-2020">2018 - 2020</div>
+            <h5 class="modal__inner__work">Student</h5>
+        <div class="modal__inner__post">Participant student committee</div>
         <div class="modal__inner__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper.
+            I took an active part in the student government team.
         </div>
     </div>
 
