--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My name is Ivan Svilohuzov, and it my site portfolio">
     <link rel="shortcut icon" href="images/resume.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
@@ -834,14 +835,14 @@
 
                 <div class="modal__resume__buttons">
                     <div class="modal__resume__download">
-                    <a href="/download/Ivan's Resume.pdf" download="" class="modal__resume__button">Download pdf
+                    <a href="/download/Ivan's Resume Eng.pdf" download="" class="modal__resume__button">Download pdf
                         <svg class="modal__resume__item">
                             <use class="modal__resume__icon" xlink:href="#download"></use>
                         </svg>
                     </a>
                 </div>
                 <div class="modal__resume__print">
-                    <a href="/download/Ivan's Resume.pdf" class="modal__resume__button modal__resume__button--margin">Print
+                    <a href="/download/Ivan's Resume Eng.pdf" class="modal__resume__button modal__resume__button--margin">Print
                         <svg class="modal__resume__item">
                             <use class="modal__resume__icon" xlink:href="#printer"></use>
                         </svg>
@@ -1038,7 +1039,7 @@
                     </div>
 
                     <div class="modal__contact__right">
-                        <map name="map"><iframe class="modal__contact__right-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4277.226014997512!2d30.522141993597753!3d50.39910739177505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf4b1bb754bb%3A0x879fcddc2e984dfd!2z0YPQuy4g0JPQvtC70L7RgdC10LXQstGB0LrQsNGPLCAxM9CRLCDQmtC40LXQsiwgMDMwMzk!5e0!3m2!1sru!2sua!4v1622885009109!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></iframe><h2 class="modal__contact__right-map-title">I'm here</h2></map>
+                        <map name="map"><iframe class="modal__contact__right-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20345.012900730067!2d30.51375792677883!3d50.40147793525145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf369b44462b%3A0x746a2e5ec167879e!2z0JTQtdC80LjQtdCy0YHQutCw0Y8!5e0!3m2!1sru!2sua!4v1622907331239!5m2!1sru!2sua" style="border:0;" allowfullscreen="" loading="lazy"></iframe><h2 class="modal__contact__right-map-title">I'm here</h2></map> <!-- Add map on mobile divaces. Processing... -->
                         
                     </div>
             </section>
