Change about. Add skills in resume

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                     <h2 class="about__bigtitle"><span>W</span><span>H</span><span>O </span><span>A</span><span>M </span><span>I</span></h2>
                     <div class="about__text">
                         <p>I have become interested in Web Development quite recently. Nevertheless, I have an experience in this sphere such as participation in UPSHIFT program from UNICEF. My team and I created MVP for our Web Dev school.  What is more, we were the winners.
-                            In result, more than 30 people were interested in it and visited our classes. Furthermore, my experience with designing and developing websites using JavaScript, HTML, CSS and a bit React matches well with your requirements.
+                            In result, more than 30 people were interested in it and visited our classes. Furthermore, my experience with designing and developing websites using JavaScript, HTML, CSS and a bit React matches well with many modern requirements.
                             </p>
                     <div class="about__text-hide">
                         <p class="about__text-one">I am a fourth-year student, and I study computer science, which is a synergy of web development, code engineering and computer «troubles solving». Such a combination creates a diversity of knowledge, allowing you to look at the tasks from different perspectives.</p>
@@ -907,12 +907,54 @@
 
             <div class="progress__bar-right">
                 <div class="progress__bar-item">
-                    <div class="progress__bar-progress" style="width: 65%;">
+                    <div class="progress__bar-progress" style="width: 80%;">
 
                     </div>
                 </div>
             </div>
             </div>
+
+            <div class="progress__bar">
+                <div class="progress__bar-left">
+                    <div class="progress__bar-title">TypeScript</div>
+                </div>
+
+        <div class="progress__bar-right">
+            <div class="progress__bar-item">
+                <div class="progress__bar-progress" style="width: 55%;">
+
+                </div>
+            </div>
+        </div>
+        </div>
+
+        <div class="progress__bar">
+            <div class="progress__bar-left">
+                <div class="progress__bar-title">React</div>
+            </div>
+
+    <div class="progress__bar-right">
+        <div class="progress__bar-item">
+            <div class="progress__bar-progress" style="width: 50%;">
+
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <div class="progress__bar">
+        <div class="progress__bar-left">
+            <div class="progress__bar-title">JQuery</div>
+        </div>
+
+<div class="progress__bar-right">
+    <div class="progress__bar-item">
+        <div class="progress__bar-progress" style="width: 67%;">
+
+        </div>
+    </div>
+</div>
+</div>
 
             <div class="progress__bar">
                 <div class="progress__bar-left">
